Change greeting from 'Hello World' to 'Goodbye World'

--- a/index.html
+++ b/index.html
@@ -189,14 +189,14 @@
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
                 <div class="rounded-lg overflow-hidden shadow-lg" data-aos="zoom-in">
                     <picture>
-                        <source srcset="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto,f_auto,w_1200/v1758315437/IMG_4774.heic_vutjsa.webp 1200w" type="image/webp">
-                        <img src="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto,f_auto,w_1200/v1758315437/IMG_4774.heic_vutjsa.jpg" alt="Lush Green Lawn in Jacksonville, FL" class="w-full h-80 object-cover hover:scale-105 transition duration-500" loading="lazy">
+                        <source srcset="https://res.cloudinary.com/dxghmamh0/image/upload/e_improve/v1767067171/IMG_9916_zpst3p.webp 1200w" type="image/webp">
+                        <img src="https://res.cloudinary.com/dxghmamh0/image/upload/e_improve/v1767067171/IMG_9916_zpst3p.jpg" alt="Lush Green Lawn in Jacksonville, FL" class="w-full h-80 object-cover hover:scale-105 transition duration-500" loading="lazy">
                     </picture>
                 </div>
                 <div class="rounded-lg overflow-hidden shadow-lg" data-aos="zoom-in" data-aos-delay="100">
                     <picture>
-                        <source srcset="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto,f_auto,w_1200/v1758315436/IMG_4563.heic_mfrtze.webp 1200w" type="image/webp">
-                        <img src="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto,f_auto,w_1200/v1758315436/IMG_4563.heic_mfrtze.jpg" alt="Fresh Sod Backyard in Jacksonville, FL" class="w-full h-80 object-cover hover:scale-105 transition duration-500" loading="lazy">
+                        <source srcset="https://res.cloudinary.com/dxghmamh0/image/upload/e_improve/v1767067155/IMG_9353_wapy5t.webp 1200w" type="image/webp">
+                        <img src="https://res.cloudinary.com/dxghmamh0/image/upload/e_improve/v1767067155/IMG_9353_wapy5t.jpg" alt="Fresh Sod Backyard in Jacksonville, FL" class="w-full h-80 object-cover hover:scale-105 transition duration-500" loading="lazy">
                     </picture>
                 </div>
                 <div class="rounded-lg overflow-hidden shadow-lg" data-aos="zoom-in" data-aos-delay="200">
@@ -207,20 +207,20 @@
                 </div>
                 <div class="rounded-lg overflow-hidden shadow-lg" data-aos="zoom-in">
                     <picture>
-                        <source srcset="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto,f_auto,w_1200/v1758906111/IMG_4560.heic_uvea3f_aarxis.webp 1200w" type="image/webp">
-                        <img src="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto,f_auto,w_1200/v1758906111/IMG_4560.heic_uvea3f_aarxis.jpg" alt="New Sod Installation in Jacksonville, FL" class="w-full h-80 object-cover hover:scale-105 transition duration-500" loading="lazy">
+                        <source srcset="https://res.cloudinary.com/dxghmamh0/image/upload/e_improve/v1767067137/IMG_0666_ygiu9l.webp 1200w" type="image/webp">
+                        <img src="https://res.cloudinary.com/dxghmamh0/image/upload/e_improve/v1767067137/IMG_0666_ygiu9l.jpg" alt="New Sod Installation in Jacksonville, FL" class="w-full h-80 object-cover hover:scale-105 transition duration-500" loading="lazy">
                     </picture>
                 </div>
                 <div class="rounded-lg overflow-hidden shadow-lg" data-aos="zoom-in" data-aos-delay="100">
                     <picture>
-                        <source srcset="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto,f_auto,w_1200/v1758307365/IMG_7625_yvjdpf.webp 1200w" type="image/webp">
-                        <img src="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto,f_auto,w_1200/v1758307365/IMG_7625_yvjdpf.jpg" alt="Beautiful Lawn Transformation in Jacksonville, FL" class="w-full h-80 object-cover hover:scale-105 transition duration-500" loading="lazy">
+                        <source srcset="https://res.cloudinary.com/dxghmamh0/image/upload/e_improve/v1767067150/IMG_9263_eyzjjo.webp 1200w" type="image/webp">
+                        <img src="https://res.cloudinary.com/dxghmamh0/image/upload/e_improve/v1767067150/IMG_9263_eyzjjo.jpg" alt="Beautiful Lawn Transformation in Jacksonville, FL" class="w-full h-80 object-cover hover:scale-105 transition duration-500" loading="lazy">
                     </picture>
                 </div>
                 <div class="rounded-lg overflow-hidden shadow-lg" data-aos="zoom-in" data-aos-delay="200">
                     <picture>
-                        <source srcset="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto,f_auto,w_1200/v1758307366/IMG_7662_jesc7o.webp 1200w" type="image/webp">
-                        <img src="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto,f_auto,w_1200/v1758307366/IMG_7662_jesc7o.jpg" alt="Premium Lawn Project in Jacksonville, FL" class="w-full h-80 object-cover hover:scale-105 transition duration-500" loading="lazy">
+                        <source srcset="https://res.cloudinary.com/dxghmamh0/image/upload/e_improve/v1767067155/IMG_9465_z1ydck.webp 1200w" type="image/webp">
+                        <img src="https://res.cloudinary.com/dxghmamh0/image/upload/e_improve/v1767067155/IMG_9465_z1ydck.jpg" alt="Premium Lawn Project in Jacksonville, FL" class="w-full h-80 object-cover hover:scale-105 transition duration-500" loading="lazy">
                     </picture>
                 </div>
             </div>
@@ -492,3 +492,4 @@
     </script>
 </body>
 </html>
+
