Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
     <!-- Open Graph Tags -->
     <meta property="og:title" content="Designer Sod and Landscaping | Jacksonville, FL">
     <meta property="og:description" content="Premier sod installation and landscaping services in Jacksonville, FL. Get a beautiful, instant lawn for your home or business.">
-    <meta property="og:image" content="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto,f_auto,w_1200/v1758906114/IMG_5125.heic_qmtjxr_dbv9tr.jpg">
+    <meta property="og:image" content="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto:good,f_auto,w_1200/v1758906114/IMG_5125.heic_qmtjxr_dbv9tr.jpg">
     <meta property="og:url" content="https://www.designersodjax.com">
     <meta property="og:type" content="website">
     <!-- Twitter Card Tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Designer Sod and Landscaping | Jacksonville, FL">
     <meta name="twitter:description" content="Premier sod installation and landscaping services in Jacksonville, FL. Get a beautiful, instant lawn for your home or business.">
-    <meta name="twitter:image" content="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto,f_auto,w_1200/v1758906114/IMG_5125.heic_qmtjxr_dbv9tr.jpg">
+    <meta name="twitter:image" content="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto:good,f_auto,w_1200/v1758906114/IMG_5125.heic_qmtjxr_dbv9tr.jpg">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
     <style>
         .hero-section {
-            background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.4)), url('https://res.cloudinary.com/dxghmamh0/image/upload/q_auto,f_auto,w_1920/v1758906114/IMG_5125.heic_qmtjxr_dbv9tr.jpg');
+            background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.4)), url('https://res.cloudinary.com/dxghmamh0/image/upload/q_auto:good,f_auto,w_1920/v1758906114/IMG_5125.heic_qmtjxr_dbv9tr.jpg');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -56,7 +56,7 @@
         "@context": "https://schema.org",
         "@type": "LocalBusiness",
         "name": "Designer Sod and Landscaping",
-        "image": "https://res.cloudinary.com/dxghmamh0/image/upload/q_auto,f_auto,w_1200/v1758906114/IMG_5125.heic_qmtjxr_dbv9tr.jpg",
+        "image": "https://res.cloudinary.com/dxghmamh0/image/upload/q_auto:good,f_auto,w_1200/v1758906114/IMG_5125.heic_qmtjxr_dbv9tr.jpg",
         "address": {
             "@type": "PostalAddress",
             "addressLocality": "Jacksonville",
@@ -109,7 +109,6 @@
             </div>
         </div>
     </nav>
-
     <!-- Hero Section -->
     <section class="hero-section h-screen flex items-center justify-center text-white pt-20">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center" data-aos="fade-up">
@@ -121,7 +120,6 @@
             </div>
         </div>
     </section>
-
     <!-- Services Section -->
     <section id="services" class="py-20 bg-gray-50">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
@@ -132,8 +130,8 @@
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <div class="service-card bg-white rounded-lg shadow-md overflow-hidden transition duration-300" data-aos="fade-up" data-aos-delay="100">
                     <picture>
-                        <source srcset="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto,f_auto,w_800/v1758906111/IMG_4560.heic_uvea3f_aarxis.webp" type="image/webp">
-                        <img src="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto,f_auto,w_800/v1758906111/IMG_4560.heic_uvea3f_aarxis.jpg" alt="Fresh Sod Installation in Jacksonville, FL" class="w-full h-64 object-cover" loading="lazy">
+                        <source srcset="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto:good,f_auto,w_800/v1758906111/IMG_4560.heic_uvea3f_aarxis.webp" type="image/webp">
+                        <img src="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto:good,f_auto,w_800/v1758906111/IMG_4560.heic_uvea3f_aarxis.jpg" alt="Fresh Sod Installation in Jacksonville, FL" class="w-full h-64 object-cover" loading="lazy">
                     </picture>
                     <div class="p-6">
                         <div class="flex items-center mb-4">
@@ -145,8 +143,8 @@
                 </div>
                 <div class="service-card bg-white rounded-lg shadow-md overflow-hidden transition duration-300" data-aos="fade-up" data-aos-delay="200">
                     <picture>
-                        <source srcset="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto,f_auto,w_800/v1758906114/IMG_5125.heic_qmtjxr_dbv9tr.webp" type="image/webp">
-                        <img src="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto,f_auto,w_800/v1758906114/IMG_5125.heic_qmtjxr_dbv9tr.jpg" alt="Commercial Lawn Project in Jacksonville, FL" class="w-full h-64 object-cover" loading="lazy">
+                        <source srcset="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto:good,f_auto,w_800/v1758906114/IMG_5125.heic_qmtjxr_dbv9tr.webp" type="image/webp">
+                        <img src="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto:good,f_auto,w_800/v1758906114/IMG_5125.heic_qmtjxr_dbv9tr.jpg" alt="Commercial Lawn Project in Jacksonville, FL" class="w-full h-64 object-cover" loading="lazy">
                     </picture>
                     <div class="p-6">
                         <div class="flex items-center mb-4">
@@ -158,8 +156,8 @@
                 </div>
                 <div class="service-card bg-white rounded-lg shadow-md overflow-hidden transition duration-300" data-aos="fade-up" data-aos-delay="300">
                     <picture>
-                        <source srcset="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto,f_auto,w_800/v1758906111/IMG_4563.heic_mfrtze_mtgdtu.webp" type="image/webp">
-                        <img src="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto,f_auto,w_800/v1758906111/IMG_4563.heic_mfrtze_mtgdtu.jpg" alt="Complete Lawn Transformation in Jacksonville, FL" class="w-full h-64 object-cover" loading="lazy">
+                        <source srcset="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto:good,f_auto,w_800/v1758906111/IMG_4563.heic_mfrtze_mtgdtu.webp" type="image/webp">
+                        <img src="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto:good,f_auto,w_800/v1758906111/IMG_4563.heic_mfrtze_mtgdtu.jpg" alt="Complete Lawn Transformation in Jacksonville, FL" class="w-full h-64 object-cover" loading="lazy">
                     </picture>
                     <div class="p-6">
                         <div class="flex items-center mb-4">
@@ -178,7 +176,6 @@
             </div>
         </div>
     </section>
-
     <!-- Gallery Section -->
     <section id="gallery" class="py-20 bg-white">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
@@ -189,38 +186,38 @@
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
                 <div class="rounded-lg overflow-hidden shadow-lg" data-aos="zoom-in">
                     <picture>
-                        <source srcset="https://res.cloudinary.com/dxghmamh0/image/upload/e_improve/v1767067171/IMG_9916_zpst3p.webp 1200w" type="image/webp">
-                        <img src="https://res.cloudinary.com/dxghmamh0/image/upload/e_improve/v1767067171/IMG_9916_zpst3p.jpg" alt="Lush Green Lawn in Jacksonville, FL" class="w-full h-80 object-cover hover:scale-105 transition duration-500" loading="lazy">
+                        <source srcset="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto:good,e_improve/v1767067171/IMG_9916_zpst3p.webp 1200w" type="image/webp">
+                        <img src="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto:good,e_improve/v1767067171/IMG_9916_zpst3p.jpg" alt="Lush Green Lawn in Jacksonville, FL" class="w-full h-80 object-cover hover:scale-105 transition duration-500" loading="lazy">
                     </picture>
                 </div>
                 <div class="rounded-lg overflow-hidden shadow-lg" data-aos="zoom-in" data-aos-delay="100">
                     <picture>
-                        <source srcset="https://res.cloudinary.com/dxghmamh0/image/upload/e_improve/v1767067155/IMG_9353_wapy5t.webp 1200w" type="image/webp">
-                        <img src="https://res.cloudinary.com/dxghmamh0/image/upload/e_improve/v1767067155/IMG_9353_wapy5t.jpg" alt="Fresh Sod Backyard in Jacksonville, FL" class="w-full h-80 object-cover hover:scale-105 transition duration-500" loading="lazy">
+                        <source srcset="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto:good,e_improve/v1767067155/IMG_9353_wapy5t.webp 1200w" type="image/webp">
+                        <img src="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto:good,e_improve/v1767067155/IMG_9353_wapy5t.jpg" alt="Fresh Sod Backyard in Jacksonville, FL" class="w-full h-80 object-cover hover:scale-105 transition duration-500" loading="lazy">
                     </picture>
                 </div>
                 <div class="rounded-lg overflow-hidden shadow-lg" data-aos="zoom-in" data-aos-delay="200">
                     <picture>
-                        <source srcset="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto,f_auto,w_1200/v1758315432/IMG_3818.heic_dxv4cv.webp 1200w" type="image/webp">
-                        <img src="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto,f_auto,w_1200/v1758315432/IMG_3818.heic_dxv4cv.jpg" alt="Poolside Green Lawn in Jacksonville, FL" class="w-full h-80 object-cover hover:scale-105 transition duration-500" loading="lazy">
+                        <source srcset="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto:good,f_auto,w_1200/v1758315432/IMG_3818.heic_dxv4cv.webp 1200w" type="image/webp">
+                        <img src="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto:good,f_auto,w_1200/v1758315432/IMG_3818.heic_dxv4cv.jpg" alt="Poolside Green Lawn in Jacksonville, FL" class="w-full h-80 object-cover hover:scale-105 transition duration-500" loading="lazy">
                     </picture>
                 </div>
                 <div class="rounded-lg overflow-hidden shadow-lg" data-aos="zoom-in">
                     <picture>
-                        <source srcset="https://res.cloudinary.com/dxghmamh0/image/upload/e_improve/v1767067137/IMG_0666_ygiu9l.webp 1200w" type="image/webp">
-                        <img src="https://res.cloudinary.com/dxghmamh0/image/upload/e_improve/v1767067137/IMG_0666_ygiu9l.jpg" alt="New Sod Installation in Jacksonville, FL" class="w-full h-80 object-cover hover:scale-105 transition duration-500" loading="lazy">
+                        <source srcset="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto:good,e_improve/v1767067137/IMG_0666_ygiu9l.webp 1200w" type="image/webp">
+                        <img src="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto:good,e_improve/v1767067137/IMG_0666_ygiu9l.jpg" alt="New Sod Installation in Jacksonville, FL" class="w-full h-80 object-cover hover:scale-105 transition duration-500" loading="lazy">
                     </picture>
                 </div>
                 <div class="rounded-lg overflow-hidden shadow-lg" data-aos="zoom-in" data-aos-delay="100">
                     <picture>
-                        <source srcset="https://res.cloudinary.com/dxghmamh0/image/upload/e_improve/v1767067150/IMG_9263_eyzjjo.webp 1200w" type="image/webp">
-                        <img src="https://res.cloudinary.com/dxghmamh0/image/upload/e_improve/v1767067150/IMG_9263_eyzjjo.jpg" alt="Beautiful Lawn Transformation in Jacksonville, FL" class="w-full h-80 object-cover hover:scale-105 transition duration-500" loading="lazy">
+                        <source srcset="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto:good,e_improve/v1767067150/IMG_9263_eyzjjo.webp 1200w" type="image/webp">
+                        <img src="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto:good,e_improve/v1767067150/IMG_9263_eyzjjo.jpg" alt="Beautiful Lawn Transformation in Jacksonville, FL" class="w-full h-80 object-cover hover:scale-105 transition duration-500" loading="lazy">
                     </picture>
                 </div>
                 <div class="rounded-lg overflow-hidden shadow-lg" data-aos="zoom-in" data-aos-delay="200">
                     <picture>
-                        <source srcset="https://res.cloudinary.com/dxghmamh0/image/upload/e_improve/v1767067155/IMG_9465_z1ydck.webp 1200w" type="image/webp">
-                        <img src="https://res.cloudinary.com/dxghmamh0/image/upload/e_improve/v1767067155/IMG_9465_z1ydck.jpg" alt="Premium Lawn Project in Jacksonville, FL" class="w-full h-80 object-cover hover:scale-105 transition duration-500" loading="lazy">
+                        <source srcset="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto:good,e_improve/v1767067155/IMG_9465_z1ydck.webp 1200w" type="image/webp">
+                        <img src="https://res.cloudinary.com/dxghmamh0/image/upload/q_auto:good,e_improve/v1767067155/IMG_9465_z1ydck.jpg" alt="Premium Lawn Project in Jacksonville, FL" class="w-full h-80 object-cover hover:scale-105 transition duration-500" loading="lazy">
                     </picture>
                 </div>
             </div>
@@ -232,7 +229,6 @@
             </div>
         </div>
     </section>
-
     <!-- Sod Types Section -->
     <section id="sod-types" class="py-20 bg-gray-50">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
@@ -286,7 +282,6 @@
             </div>
         </div>
     </section>
-
     <!-- CTA Section -->
     <section class="py-20 bg-green-700 text-white">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
@@ -300,7 +295,6 @@
             </div>
         </div>
     </section>
-
     <!-- Contact Section -->
     <section id="contact" class="py-20 bg-white">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
@@ -376,7 +370,6 @@
             </div>
         </div>
     </section>
-
     <!-- Footer -->
     <footer class="bg-gray-900 text-white py-12">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
@@ -413,7 +406,8 @@
                             <i data-feather="map-pin" class="h-5 w-5 text-gray-400 mr-2"></i>
                             <span class="text-gray-400">Jacksonville, FL</span>
                         </li>
-                        <td><i data-feather="phone" class="h-5 w-5 text-gray-400 mr-2"></i>
+                        <li class="flex items-center">
+                            <i data-feather="phone" class="h-5 w-5 text-gray-400 mr-2"></i>
                             <span class="text-gray-400">(443) 487-1019</span>
                         </li>
                         <li class="flex items-center">
@@ -428,7 +422,6 @@
             </div>
         </div>
     </footer>
-
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             AOS.init({
@@ -437,7 +430,6 @@
                 once: true
             });
             feather.replace();
-
             const mobileMenuButton = document.getElementById('mobile-menu-button');
             const mobileMenu = document.getElementById('mobile-menu');
             mobileMenuButton.addEventListener('click', () => {
@@ -447,7 +439,6 @@
                 mobileMenuButton.querySelector('i').setAttribute('data-feather', isOpen ? 'x' : 'menu');
                 feather.replace();
             });
-
             const form = document.getElementById('contact-form');
             const formMessage = document.getElementById('form-message');
             form.addEventListener('submit', async (e) => {
