Update fmt.Println to output 'Goodbye World'

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
     <style>
         .hero-section {
-            background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.4)), url('https://res.cloudinary.com/dxghmamh0/image/upload/q_auto:good,f_auto,w_1920/v1758906114/IMG_5125.heic_qmtjxr_dbv9tr.jpg');
+            background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.4)), url('https://res.cloudinary.com/dxghmamh0/image/upload/e_improve/v1767067155/IMG_9353_wapy5t.jpg');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -483,4 +483,5 @@
     </script>
 </body>
 </html>
+
 
