--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <style>
     .hero-section {
         background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.4)), 
-                    url('https://res.cloudinary.com/dxghmamh0/image/upload/e_improve/v1767067155/IMG_9353_wapy5t.jpg');
+                    url('https://drive.google.com/drive/folders/19N06k_BqXh8hu4rxbTeBMdBfdKBKD6Fl?dmr=1&ec=wgc-drive-globalnav-goto');
         background-size: 100% auto;         /* Middle ground: full width, natural height */
         background-position: center bottom; /* Keeps grass at the bottom */
         background-repeat: no-repeat;
@@ -486,6 +486,7 @@
     </script>
 </body>
 </html>
+
 
 
 
