--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js">
     </script>
-   <style>
+  <style>
     .hero-section {
         background: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.45)),
-                    url('https://res.cloudinary.com/dxghmamh0/image/upload/q_auto:good,f_auto/v1767495346/image_3_1_f7uebh.jpg');
-        background-size: cover;
-        background-position: center center;
+                    url('https://res.cloudinary.com/dxghmamh0/image/upload/v1767495346/image_3_1_f7uebh.jpg');
+        background-size: cover;             /* Fills the screen (some cropping on sides/top) */
+        background-position: center center; /* Centers the collage nicely */
         background-repeat: no-repeat;
-        background-color: #166534; /* Dark green fallback */
+        background-color: #166534;          /* Dark green fallback */
     }
     .service-card:hover {
         transform: translateY(-10px);
@@ -486,6 +486,7 @@
     </script>
 </body>
 </html>
+
 
 
 
